--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
   <head>
+
+    <!--Temporary fix! todo: include tether properly-->
+    <script src="//github.hubspot.com/tether/dist/js/tether.js"></script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
