Use relative path in index.html

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ng-vcl demo</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link href="/app.css" rel="stylesheet">
+    <link href="app.css" rel="stylesheet">
     <base href="/">
   </head>
   <body>
     <app></app>
-    <script src="/vendor.js"></script>
-    <script src="/main.js"></script>
+    <script src="vendor.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
