--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <app></app>
-    <script src="vendor.js"></script>
+    <script src="polyfills.js"></script>
+    <script src="lib.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
