remove base-href

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ng-vcl demo</title>
     <link href="app.css" rel="stylesheet">
-    <base href="/">
+<!--    <base href="/"> -->
   </head>
   <body>
     <app></app>
