--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/default.min.css">
     <link rel="shortcut icon" href="/imgs/favicon.png">
     <title>ng-vcl demo</title>
-  <link href="styles/app.css" rel="stylesheet"></head>
+  <link href="app.css" rel="stylesheet"></head>
   <body>
     <app></app>
-  <script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="lib.js"></script><script type="text/javascript" src="main.js"></script></body>
+  <script type="text/javascript" src="manifest.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
