Turned vcl-busy-indicator into web component

--- a/lib/ng-vcl/index.wc.html
+++ b/lib/ng-vcl/index.wc.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ng-vcl wc demo</title>
-  </head>
+  </head>HTMLElement
   <body>
     <vcl-flip-switch></vcl-flip-switch>
+    <vcl-busy-indicator></vcl-busy-indicator>
   </body>
 </html>
