--- a/lib/ng-vcl/index.wc.html
+++ b/lib/ng-vcl/index.wc.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ng-vcl wc demo</title>
-  </head>HTMLElement
-  <body>
-    <vcl-flip-switch></vcl-flip-switch>
-    <vcl-busy-indicator></vcl-busy-indicator>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>ng-vcl wc demo</title>
+</head>
+HTMLElement
+<body>
+<!--<vcl-flip-switch></vcl-flip-switch>-->
+<!--<vcl-busy-indicator test>hello</vcl-busy-indicator>-->
+<test-component></test-component>
+</body>
 </html>
