--- a/lib/ng-vcl/index.wc.html
+++ b/lib/ng-vcl/index.wc.html
@@ -6,10 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>ng-vcl wc demo</title>
 </head>
-HTMLElement
 <body>
-<!--<vcl-flip-switch></vcl-flip-switch>-->
-<!--<vcl-busy-indicator test>hello</vcl-busy-indicator>-->
+<vcl-flip-switch></vcl-flip-switch>
+<vcl-busy-indicator test>hello</vcl-busy-indicator>
 <test-component></test-component>
 </body>
 </html>
