--- a/lib/ng-vcl/index.wc.html
+++ b/lib/ng-vcl/index.wc.html
@@ -7,8 +7,13 @@
   <title>ng-vcl wc demo</title>
 </head>
 <body>
-<vcl-flip-switch></vcl-flip-switch>
-<vcl-busy-indicator test>hello</vcl-busy-indicator>
-<test-component></test-component>
+
+  <h3>Flip Switch</h3>
+  <vcl-flip-switch></vcl-flip-switch>
+  <h3>Busy Indicator</h3>
+  <vcl-busy-indicator>Loading</vcl-busy-indicator>
+  <h3>Button</h3>
+  <button is="vcl-button">Button</button>
+
 </body>
 </html>
