wc: move to seperate folder + fixes

--- a/wc/index.html
+++ b/wc/index.html
@@ -21,11 +21,11 @@
   <button is="vcl-button">Button</button>
 
   <h3>Icon Button </h3>
-  <button is="vcl-icon-button" icon="fas:bolt" title="Square Button" (click)="someAction($event)">Button</button>
+  <button is="vcl-icon-button" icon="fas:bolt" title="Square Button"></button>
 
   <h3>Icogram Button </h3>
   <!--dash-case is converted to camelCase (prep-icon -> prepIcon) -->
-  <button is="vcl-icogram-button" app-icon="fas fa-clock">Label button with appended icon</button>
+  <button is="vcl-icogram-button" app-icon="fas:clock">Label button with appended icon</button>
   <button is="vcl-icogram-button" prep-icon="fas:bolt">Label button with prepended icon</button>
   <button is="vcl-icogram-button" app-icon="fas:bolt" prep-icon="fas:bolt">Label button with prepended and appended icon</button>
 
